--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -8,13 +8,13 @@ hvor $\{c_1,c_2,\ldots,c_n\} \in \R$.
 Et \textbf{lineært ligningssystem} er en mængde af $m$ lineære ligninger med de samme $n$ variable, hvor $\{m, n\} \in \Z^+$.
 Dette kan skrives på formen
 \begin{align*}
-c_{11}x_1+c_{12}x_2+&\cdots+c_{1n}x_n=b_1\\
-c_{21}x_1+c_{22}x_2+&\cdots+c_{2n}x_n=b_2\\
+c_{1,1}x_1+c_{1,2}x_2+&\cdots+c_{1,n}x_n=b_1\\
+c_{2,1}x_1+c_{2,2}x_2+&\cdots+c_{2,n}x_n=b_2\\
 &\vdots\\
-c_{m1}x_1+c_{m2}x_2+&\cdots +c_{mn}x_n=b_m
+c_{m,1}x_1+c_{m,2}x_2+&\cdots +c_{m,n}x_n=b_m
 \text{,}
 \end{align*}
-hvor $c_{ij}$ betegner koefficienten af $x_j$ i ligning $i$.
+hvor $c_{i,j}$ betegner koefficienten af $x_j$ i ligning $i$.
 \end{defn}
 \noindent
 Løsningen på et sådant system er en vektor
@@ -29,7 +29,7 @@ s_n
 \end{bmatrix},
 $
 \end{center}
-i $\R ^n$, således at alle ligninger er opfyldt, når $x_i$ erstattes med $s_i$. Et eksempel på et lineært ligningssystem ses i \ref{eks:lignsys}.
+i $\R ^n$, således at alle ligninger er opfyldt, når $x_i = s_i$.
 %
 \\
 %
@@ -53,13 +53,13 @@ Alle lineære ligningssystemer har enten ingen, én eller uendeligt mange løsni
 Ligninger i $\R^2$ kan repræsenteres ved linjer, og ligninger i $\R^3$ kan repræsenteres ved planer.
 % Er det en eller et plan? Hess siger altid "en"... Hmmmmm.. 
 Hvis disse ligninger er parallelle og forskellige, har systemet ingen løsning.
-Hvis ligningerne er forskellige, så har systemet præcis én løsning, hvor ligningerne krydser hinanden. 
+Hvis ligningerne er forskellige og ikke parallelle, så har systemet præcis én løsning, hvor ligningerne krydser hinanden.
 Hvis ligningerne er ens, har systemet uendeligt mange løsninger.
 \\\\
 %
-Et system der har én eller flere løsninger kaldes \textit{konsistent}; ellers kaldes det \textit{inkonsistent}, da der ingen løsninger eksisterer.
+Et system der har én eller flere løsninger kaldes \textit{konsistent}; ellers kaldes det \textit{inkonsistent}.
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \subsection{Ligningssystemer og matricer}
 Et lineært ligningssystem kan opstilles som en \textit{matrixligning} $A\textbf{x}=\textbf{b}$, hvor
@@ -112,10 +112,6 @@ a_{m,1} & a_{m,2} & \cdots & a_{m,n} & b_{m}\\
 \end{blockarray}.
 \end{equation*}
 %
-\\
-Ligningssystemet fra \ref{eks:lignsys} opskrives som totalmatricen i \ref{eks:lig_mat}. 
-%
-%
 \begin{eks}\label{eks:lig_mat}
 Med udgangspunkt i ligningssystemet fra \ref{eks:lignsys} følger det at
 $$A=
@@ -144,7 +140,7 @@ $$
 og totalmatricen 
 %
 \begin{equation*}
-  [A \text{    } | \mathbf{b}] =
+  [A \mid \mathbf{b}] =
 \begin{blockarray}{ccccccc}
 x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{block}{[ccccc|c]c}
