--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -9,7 +9,8 @@ $$
 \textbf{e}_1=
 \begin{bmatrix}
 1 \\ 
-0 \\ 
+0 \\
+0 \\
 \vdots \\
 0
 \end{bmatrix}
@@ -17,7 +18,8 @@ $$
 \textbf{e}_2=
 \begin{bmatrix}
 0 \\ 
-1 \\ 
+1 \\
+0 \\
 \vdots \\
 0
 \end{bmatrix}
@@ -27,12 +29,15 @@ $$
 \textbf{e}_n=
 \begin{bmatrix}
 0 \\ 
-0 \\ 
+0 \\
+0 \\
 \vdots \\
 1
 \end{bmatrix}
 \text{. }
 $$
+%
+Sammensættes standardvektorer i en matrix opnås en \textit{identitetsmatrix}.
 %
 \begin{defn}{}{}
 %
