--- a/incl/pre/conf.tex
+++ b/incl/pre/conf.tex
@@ -19,7 +19,7 @@
 % Sidehoved og sidefod ---------------------------------------------------------
 % http://mirrors.dotsrc.org/ctan/macros/latex/contrib/fancyhdr/fancyhdr.pdf
 \fancyhead{}                            % ryd standardindhold
-\fancyhead[LE,RO]{Group \projectgroup}  % venstre på lige sider, højre på ulige
+\fancyhead[LE,RO]{Gruppe \projectgroup}  % venstre på lige sider, højre på ulige
 \fancyhead[RE]{\leftmark}               % højre på ulige sider
 \fancyhead[LO]{\rightmark}              % venstre på ulige sider
 \fancyfoot{}                            % ryd standardindhold
